<?xml version="1.0"?>
<package format="2">
  <name>mars_control</name>
  <version>0.0.0</version>
  <description>The mars_control package</description>

  <maintainer email="ruppulur@todo.todo">ruppulur</maintainer>

  <license>TODO</license>

  <build_export_depend>message_runtime</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>moveit</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>mars_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/mars_control_plugins.xml" />
  </export>

</package>