<?xml version="1.0"?>
<package format="2">
  <name>mars_arm_description</name>
  <version>0.0.0</version>
  <description>The mars_arm_description package</description>

  <maintainer email="raghava@todo.todo">raghava</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_description</build_depend>
  <build_export_depend>franka_description</build_export_depend>
  <exec_depend>franka_description</exec_depend>
  <build_depend>wsg_50_simulation</build_depend>
  <build_export_depend>wsg_50_simulation</build_export_depend>
  <exec_depend>wsg_50_simulation</exec_depend>

  <export>
  </export>
</package>
